--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -66,7 +66,7 @@
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="35"/>
                         <RowDefinition Height="35"/>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="35"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
@@ -110,7 +110,9 @@
                     <Button x:Name="ButtonUploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload Draft" Click="ButtonUploadRunbook_Click" />
                     <Button x:Name="ButtonTestRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Test Draft in Azure" Click="ButtonTestRunbook_Click"/>
                     <Button x:Name="ButtonPublishRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Publish Draft" Click="ButtonPublishRunbook_Click" IsEnabled="False"/>
-                    <Button x:Name="ButtonSourceControlRunbook" Grid.Column="0" Grid.Row="3" Margin="5,10,5,5" Content="Sync Source Control" Click="ButtonSourceControlRunbook_Click" IsEnabled="False" Visibility="Collapsed" Height="25"/>
+                    <Button x:Name="ButtonCreateRunbook" Grid.Column="0" Grid.Row="3" Margin="5,10,5,0" Content="New Runbook" Click="ButtonCreateRunbook_Click"/>
+                    <Button x:Name="ButtonDeleteRunbook" Grid.Column="1" Grid.Row="3" Margin="5,10,5,0" Content="Delete Runbook" Click="ButtonDeleteRunbook_Click"/>
+                    <Button x:Name="ButtonSourceControlRunbook" Grid.Column="2" Grid.Row="3" Margin="5,10,5,5" Content="Sync Source Control" Click="ButtonSourceControlRunbook_Click" IsEnabled="False" Visibility="Collapsed"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="settingsTab" Header="Assets">
