--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -128,6 +128,7 @@
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="35"/>
                         <RowDefinition Height="35"/>
+                        <RowDefinition Height="35"/>
                         <RowDefinition Height="5"/>
                     </Grid.RowDefinitions>
                     <Label x:Name="assetsTypeLabel" Margin="5,0,0,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">Asset Type</Label>
@@ -179,6 +180,8 @@
                     <Button x:Name="ButtonDownloadAsset" Grid.Column="0" Grid.Row="4" Margin="5,10,5,0" Content="Download" Click="ButtonDownloadAsset_Click" />
                     <Button x:Name="ButtonUploadAsset" Grid.Column="1" Grid.Row="4" Margin="5,10,5,0" Content="Upload" Click="ButtonUploadAsset_Click" />
                     <Button x:Name="ButtonDeleteAssets" Grid.Column="2" Grid.Row="4" Margin="5,10,5,0" Content="Delete" Click="ButtonDeleteAsset_Click" />
+                    <Button x:Name="ButtonInsertAssets" Grid.Column="0" Grid.Row="5" Margin="5,10,5,0" Content="Insert" Click="ButtonInsertAsset_Click" />
+
                 </Grid>
             </TabItem>
             <TabItem x:Name="feedbackTab" Header="Give Feedback">
